side_notes/calculator12/cal.css
:root {

    --lcd-font:rgba(76, 84, 190, 0.9);
    --button:rgba(121,120,125,255);
    --button-text:rgba(246,250,251,255);
    --button-text-shadow: rgba(191,196,196,255);
    --button-2:rgba(145,190,50,255);
    --button-background:rgb(121, 130, 131) ;
    
/*
    --test-border: none;
    --test-border2: none;
    --test-border3: none;
    --test-border4: none;
*/
    
    --test-border: red;
    --test-border2: rgba(255, 255, 255, 0.588);
    --test-border3: rgb(52, 241, 0);
    --test-border4: yellow;

    --button-edge-curve: calc(var(--font-size)/15);
    

}

.calc_head, .calc_lcd, .calc_fn, .calc_buttons {
    width: 100%;
    border: 1px solid var(--test-border);
    flex: 1;
    font-size: 10px;
}


.calc_head {
    flex: 0.4;

}
.calc_lcd {
    flex: 0.6;
}

.calc_fn {
    flex: 1.01;
}

.calc_buttons {
    flex: 0.99;
}



/*////////////////////////////////////////////////////////////////////*/
/*////////////////////////////////////////////////////////////////////*/




.display_space {
    border: 1px solid var(--test-border2);
    height: 60%;
    width: 76%;
    margin: auto;

    margin-top: 9%;

    color: var(--lcd-font);
    font-family: monospace;
    font-weight: 500;

    text-transform: uppercase;

    display: flex;
    flex-direction: column;

}

    .writing_space, .result_space {
        width: 100%;
        border: 1px solid var(--test-border3);
        flex: 1;
        padding-left: 1%;
        font-size: calc(var(--font-size)/7.5);



    }

    .result_space {
        text-align: end;
        padding-right: 1%;
    }

    .writing_space, .result_space {
        display: flex;
        flex-direction: row;

    }

    .writing_space_input, .result_space_output {
        overflow-x: hidden;
        /*text-overflow: ellipsis;*/
    }

    .overflowDotsBlink {
        animation: blink 1s linear infinite alternate; 
    }

    @keyframes blink {
        from {
            opacity: 0;
        }

        to {
            opacity: 1;
        }
        
    }


/*////////////////////////////////////////////////////////////////////*/
/*////////////////////////////////////////////////////////////////////*/
/* number buttons */

.calc_buttons {
    display: flex;
    justify-content: center;

}

.calc_buttons table {
    width: 85%;
    border: 1px solid var(--test-border3);
    height: 88%;
    margin-top: 2.5% ;
    margin-left: +1.5%;



}

.calc_buttons table tr td {
    border: 1px solid var(--test-border4);
    text-align: center;

    position: relative;
    left: -1.2%;

    height: 15%;
    width: 15%;

}

/*img alignment : buttons space are pushed to left except the last two as is */
.calc_buttons table tr td + td + td + td {
    left: 0%;

}

.calc_buttons table tr td button {
    margin-top: -12%;
    margin-left: auto;
    margin-right: auto;
    height: calc(var(--cube-width)/1.15);
    width: calc(var(--cube-width)*1.1);
    border-radius: 14%;
    border: 2px solid black;
    box-sizing: border-box;
    background-color: var(--button-background);
    color: var(--button-text);

    overflow-x: hidden;

    display: flex;
    justify-content: center;
    align-items: center;

    font-size: calc(var(--font-size)/7.5);


}

.calc_buttons table tr td button.ac_button, .calc_buttons table tr td button.del_button  {
    background-color: var(--button-2);
    padding: 0;
    padding-bottom: 2%;

}

.calc_buttons table tr td button.top-left {
    border-top-left-radius: var(--button-edge-curve);
}

.calc_buttons table tr td button.top-right {
    border-top-right-radius: var(--button-edge-curve);
}

.calc_buttons table tr td button.bottom-right {
    border-bottom-right-radius: var(--button-edge-curve);

}

.calc_buttons table tr td button.bottom-left {
    border-bottom-left-radius: var(--button-edge-curve);
}



/*////////////////////////////////////////////////////////////////////*/
/*////////////////////////////////////////////////////////////////////*/



.calc_fn {
    display: flex;
    justify-content: center;

}

.calc_fn table {
    width: 85%;
    border: 1px solid var(--test-border3);
    height: 90%;
    margin-top: 5% ;
    margin-left: 1%;



}


.calc_fn table tr td {
    border: 1px solid var(--test-border2);
    text-align: center;

    position: relative;
    left: 0;

    height: 10%;
    width: 10%;

}

.calc_fn table tr:nth-child(even) {

}

/*img alignment : buttons space are pushed to left except the last two as is */
.calc_fn table tr td + td + td + td {
    left: 0%;

}

.calc_fn table tr td button {
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
     /* height: calc(var(--cube-width)/3);
    width: calc(var(--cube-width)/1); */
    border-radius: 14%;
    border: 2px solid black;
    box-sizing: border-box;
    background-color: var(--button-background);
    color: var(--button-text);

    overflow-x: hidden;

    display: flex;
    justify-content: center;
    align-items: center;

    font-size: calc(var(--font-size)/16);

    display: none;


}

.calc_fn table tr td button.column-btn {
    display: flex;
    justify-content: center;
    align-items: center;

}



.calc_fn table tr td button.top-left {
    border-top-left-radius: var(--button-edge-curve);
}

.calc_fn table tr td button.top-right {
    border-top-right-radius: var(--button-edge-curve);
}

.calc_fn table tr td button.bottom-right {
    border-bottom-right-radius: var(--button-edge-curve);

}

.calc_fn table tr td button.bottom-left {
    border-bottom-left-radius: var(--button-edge-curve);
}

